# DogeVPN

./: Readme.md  config.txt  docker-compose.yml  erase_cts.sh  tcp_server.c  tcp_server.cpp
client/: .dockerignore  Dockerfile  Makefile  README.md  aes.c  aes.h  client.c  client.cpp  client_new.c  compile.sh  defines.h  docker-compose.yml  run.sh  vpnclient.c
client/DogeVPNGui/: CMakeLists.txt  client.cpp  client.h  config.txt  defines.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswidget.cpp  settingswidget.h  standards.h  thread.cpp  thread.h
lib/: client_credentials_utils.cpp  client_credentials_utils.h  encryption.cpp  encryption.h  socket_utils.cpp  socket_utils.h  ssl_utils.cpp  ssl_utils.h  tun_utils.cpp  tun_utils.h  utils.cpp  utils.h  vpn_data_utils.cpp  vpn_data_utils.h
server/: CMakeLists.txt  Dockerfile  Makefile  README.md  cert.pem  compile.sh  docker-compose.yml  mongo-init.js  mongo.cpp  run.sh  tcp_server.cpp
server/certs/: key.pem
server/include/: client_credentials_utils.h  data_structures.h  defines.h  encryption.h  holder.h  mongo.hpp  openssl.h  selector.h  socket.h  socket_utils.h  ssl_utils.h  standards.h  udp_client_info_utils.h  utils.h  vpn_data_utils.h
server/src/: client_credentials_utils.cpp  encryption.cpp  holder.cpp  main.cpp  mongo.cpp  openssl.c  openssl_main.c  selector.cpp  socket_utils.cpp  ssl_utils.cpp  tcp_server.c  udp_client_info_utils.cpp  utils.cpp  vpn_data_utils.cpp  vpn_server.cpp
